general corrections: z-index in web-header, font syntax in next-text, section-title, new-article, card-title and card-text, changed font to open sans in card-text, changed recent-entries and older-entries top margin, changed font-weight in slider-text, corrected div height in cover-text

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ section, header, footer {
     height: 60px;
     display: flex;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     width: 100%;
     margin: 0 auto;
     align-self: center
@@ -123,7 +123,7 @@ section, header, footer {
     letter-spacing: 0px;
     color: #FFFFFF;
     width: 535.7px;
-    height: 60.63px;
+    height: 80px;
 }
 
 .cover-slider {
@@ -143,7 +143,7 @@ section, header, footer {
 
 .slider-back-circle {
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #ffffff80;
     width: 55px;
     height: 55px;
     border-radius: 50%;
@@ -169,13 +169,13 @@ section, header, footer {
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     font-size: 13px;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .next-cover-container {
     width: 260px;
     height: 157px;
-    background-color: rgba(42, 48, 55, 0.5);
+    background-color: #2a303780;
     border: 2px dashed #FFFFFF;
     border-radius: 6px;
     position: absolute;
@@ -225,7 +225,10 @@ section, header, footer {
 
 .next-text {
     text-align: left;
-    font: normal normal 300 14px/22px Montserrat;
+    font-size: 14px;
+    line-height: 22px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
     letter-spacing: 0px;
     color: #FFFFFF;
     margin-top: 11px;
@@ -234,12 +237,15 @@ section, header, footer {
 
 .tendencias {
     background-color: #EBEBEB;
-    height: 110vh;
+    height: 750px;
 }
 
 .section-title {
     text-align: left;
-    font: normal normal bold 24px/20px Montserrat;
+    font-size: 24px;
+    line-height: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     letter-spacing: 0px;
     color: #2A3037;
     margin-left: 8px;
@@ -264,7 +270,10 @@ section, header, footer {
     height: 32px;
     width: 83px;
     text-align: left;
-    font: normal normal bold 16px/13px Montserrat;
+    font-size: 16px;
+    line-height: 13px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     letter-spacing: 0px;
     color: #FFFFFF;
     position: absolute;
@@ -302,20 +311,26 @@ section, header, footer {
 
 .card-title {
     text-align: left;
-    font: normal normal bold 16px/20px Montserrat;
+    font-size: 16px;
+    line-height: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     letter-spacing: 0px;
     color: #2A3037;
 }
 
 .card-text {
     text-align: left;
-    font: normal normal normal 13px/23px Montserrat;
+    font-size: 13px;
+    line-height: 23px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
     letter-spacing: 0px;
     color: #7A838D;
 }
 
 .card-text span {
-    font-weight: bold;
+    font-weight: 700;
 }
 
 /*-------------------------------------BLOG---------------------------------------*/
@@ -324,7 +339,7 @@ section, header, footer {
     position: relative;
     z-index: 1;
     background-color: transparent;
-    margin-top: -200px;
+    margin-top: -190px;
 }
 
 .blog-container {
@@ -335,12 +350,13 @@ section, header, footer {
     display: flex;
 }
 
-/*--------------------------------RECENT ENTRIES----------------------------------*/
-
 .recent-entries, .older-entries {
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
 }
+
+/*--------------------------------RECENT ENTRIES----------------------------------*/
 
 .recent-article {
     border-radius: 6px;
